# SeperateKinfu

./: .gitignore  CMakeLists.txt  README.md  symlink.sh
tools/: kinfuLS_app.cpp
